large size done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>Portfolio Template</title>
 </head>
 <body>
@@ -36,7 +37,7 @@
                             <a href="#">About me</a>
                         </div>
                         <div class="cta-project">
-                            <a href="#" class="">Project</a>
+                            <a href="#">Project</a>
                         </div>
                     </div>
                 </div>
@@ -46,6 +47,174 @@
                         </div>  
                     </div>
             </section>
+            <section id="about-section">
+                <div class="about-me">
+                    <h1>
+                        About me:
+                    </h1>
+                    <p class="about-me-para">
+                        Hi, my name is Jayjay Dinero Dinero, i am a Fullstack web developer, UI designer, and Mobile developer. I jhave honed my skills in Web Development and advance i have core understanding of advance UI design principles. Here are the major skills i have.
+                    </p>
+                    <div class="exp">
+                        <p>5+ </p>
+                        <p class="exp-para">Years of experience. Specialised in building apps, while ensuring a seamless web experience for end users.</p>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="skill">
+                        <p class="about-icons"><i class="fa-brands fa-figma"></i></p>
+                        <p>UI & UX<br>Designing</p>
+                    </div>
+                    <div class="skill">
+                        <p class="about-icons"><i class="fa-regular fa-laptop-code"></i></p>
+                        <p>Web<br>Development</p>
+                    </div>
+                    <div class="skill">
+                        <p class="about-icons"><i class="fa-brands fa-android"></i></p>
+                        <p>Mobile<br>Development</p>
+                    </div>
+                    <div class="skill">
+                        <p class="about-icons"><i class="fa-brands fa-python"></i></p>
+                        <p>Web Scrapping<br>With Python</p>
+                    </div>
+                </div>
+              
+                <div class="other-services">
+                    <h1>The services i offer:</h1>
+                    <div class="services">
+                        <div class="service">
+                            <div class="service-content">
+                                <p class="about-icons"><i class="fa-brands fa-figma"></i></p>
+                                <p>UI & UX Designing</p>
+                                <p>I design beautiful web iterfaces with Figma and Adove XD</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-content">
+                                <p class="about-icons"><i class="fa-regular fa-laptop-code"></i></p>
+                                <p class="two">WEB DEVELOPMENT</p>
+                                <p>I create beautiful iterfaces with simple HTML, CSS, & JavaScript and also frameworks like Angular and ReactJS</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-content">
+                                <p class="about-icons"><i class="fa-brands fa-android"></i></p>
+                                <p>MOBILE DEVELOPMENT</p>
+                                <p>I am an expert mobile developer. I have experience using Flutter and React Native.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-content">
+                                <p class="about-icons">
+                                    <i class="fa-brands fa-node-js"></i>
+                                </p>
+                                <p class="four">NPM AND NODEJS</p>
+                                <p>I have core understanding of NPM. I can also develop general purpose applications with NodeJS</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-content">
+                                <p class="about-icons"><i class="fa-solid fa-code-branch"></i></p>
+                                <p>VERSION CONTROL</p>
+                                <p>I can use version control systems well, and Git & Mecurial are my go-to tool.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div class="service-content">
+                                <p class="about-icons"><i class="fa-brands fa-python"></i></p>
+                                <p class="six">WEB SCRAPING</p>
+                                <p>I can collect content and data from the internet then manipulate and analyze as needed.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="projects">
+                <div class="featured-project">
+                    <h1>Featured-projects:</h1>
+                    <p>I have worked on many projects over the course of being a Web Developer, here are a few of my live, real-world projects</p>
+                </div>
+                <div class="featured-project-card">
+                    <div class="project-card">
+                        <div class="thumbnail">
+                            <img src="" alt="" class="project-card-img">
+                        </div>
+                        <div class="description">
+                            <h1>Twinder</h1>
+                            <p>A live Geolocation app for finding tweets and twitter users around you.</p>
+                        </div>
+                        <div class="project-card-btn">
+                            <a href="#">View Link</a>
+                            <a href="#">Github Repo</a>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="thumbnail">
+                            <img src="" alt="" class="project-card-img">
+                        </div>
+                        <div class="description">
+                            <h1>Twinder</h1>
+                            <p>A live Geolocation app for finding tweets and twitter users around you.</p>
+                        </div>
+                        <div class="project-card-btn">
+                            <a href="#">View Link</a>
+                            <a href="#">Github Repo</a>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="thumbnail">
+                            <img src="" alt="" class="project-card-img">
+                        </div>
+                        <div class="description">
+                            <h1>Twinder</h1>
+                            <p>A live Geolocation app for finding tweets and twitter users around you.</p>
+                        </div>
+                        <div class="project-card-btn">
+                            <a href="#">View Link</a>
+                            <a href="#">Github Repo</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- CONTACT -->
+            <section id="contact">
+                <div class="contact-left">
+                    <h1>Connect with me:</h1>
+                    <p>Satisfied with me? Please contact me</p>
+                    <ul>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+                <div class="contact-right">
+                    <h2>Contact me, let’s make magic together</h2>
+                        <form>
+                            <input type="text" name="" id="" placeholder="Name:">
+                            <input type="text" name="" id="" placeholder="Email:">
+                            <input type="text" name="" id="" placeholder="Message:">
+                            <button>Send</button>
+                        </form>
+                </div>
+            </section>
+        </div>
+        <div class="footer">
+            <div class="footer-text">
+                <p>@2022 Jayjay Dinero Dinero</p>
+                <p>Fullstack Developer</p>
+                <p>UI Designer</p>
+                <p>Data Analyst</p>
+                <p>Designed by @ernestechie</p>
+            </div>
+            <div class="footer-social">
+                <ul>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    </ul>
+            </div>
         </div>
     </div>
 </body>
