--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 </div>
                 <ul class="nav-list">
                     <li class="nav-link"><a class="active" href="#">Home</a></li>
-                    <li class="nav-link"><a href="#">About</a></li>
-                    <li class="nav-link"><a href="#">Project</a></li>
-                    <li class="nav-link"><a href="#">Contact</a></li>
+                    <li class="nav-link"><a href="#about-section">About</a></li>
+                    <li class="nav-link"><a href="#projects">Project</a></li>
+                    <li class="nav-link"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,10 +34,10 @@
                     </div>
                     <div class="call-to-action">
                         <div class="cta-about">
-                            <a href="#">About me</a>
+                            <a href="#about-section">About me</a>
                         </div>
                         <div class="cta-project">
-                            <a href="#">Project</a>
+                            <a href="#projects">Project</a>
                         </div>
                     </div>
                 </div>
