--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <nav class="main-nav">
                 <div class="logo">
                     <h1>JasDev</h1>
+                    <span class="menu"><i class="fa-solid fa-bars"></i></span>
                 </div>
                 <ul class="nav-list">
                     <li class="nav-link"><a class="active" href="#">Home</a></li>
