--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="wrapper">
         <div class="header">
             <nav class="main-nav">
+                <span class="menu"><i class="fa-solid fa-bars"></i></span>
                 <div class="logo">
                     <h1>JasDev</h1>
-                    <span class="menu"><i class="fa-solid fa-bars"></i></span>
                 </div>
                 <ul class="nav-list">
-                    <li class="nav-link"><a class="active" href="#">Home</a></li>
+                    <li class="nav-link"><a href="#">Home</a></li>
                     <li class="nav-link"><a href="#about-section">About</a></li>
                     <li class="nav-link"><a href="#projects">Project</a></li>
-                    <li class="nav-link"><a href="#contact">Contact</a></li>
+                    <li class="nav-link"><a href="https://drive.google.com/file/d/1bnjMItUk1AhZwILXXMqa8bk8Gl-7rpFB/view" target="_blank">Resumé</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,11 +35,11 @@
                     </div>
                     <div class="call-to-action">
                         <div class="cta-about">
-                            <a href="#about-section">About me</a>
+                            <a href="https://drive.google.com/file/d/1bnjMItUk1AhZwILXXMqa8bk8Gl-7rpFB/view" target="_blank">Résumé <i class="fa-solid fa-link"></i></a>
                         </div>
-                        <div class="cta-project">
+                        <!-- <div class="cta-project">
                             <a href="#projects">Project</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                     <div class="hero-right">
@@ -54,57 +54,57 @@
                         About me:
                     </h1>
                     <p class="about-me-para">
-                        Hi, my name is Jayjay Dinero Dinero, i am a Fullstack web developer, UI designer, and Mobile developer. I jhave honed my skills in Web Development and advance i have core understanding of advance UI design principles. Here are the major skills i have.
+                        Hi, I'm Jasper I currently mastering my front-end skill. I have a core understanding of front-end development. I do know how to use flexbox, grid, and media queries in CSS. I also have a basic understanding of JavaScrip, I know how DOM Manipulation, Functions, Classes, Object, and Arrays work. Also, I studying frameworks like Tailwind and JavaScrip library React.<br><br>
+                        Here is the skills that I have.
                     </p>
-                    <div class="exp">
+                    <!-- <div class="exp">
                         <p>5+ </p>
                         <p class="exp-para">Years of experience. Specialised in building apps, while ensuring a seamless web experience for end users.</p>
-                    </div>
+                    </div> -->
                 </div>
+
                 <div class="skills">
                     <div class="skill">
-                        <p class="about-icons"><i class="fa-brands fa-figma"></i></p>
-                        <p>UI & UX<br>Designing</p>
+                        <p class="about-icons"><i class="fa-brands fa-html5"></i></p>
+                        <p>HTML</p>
                     </div>
                     <div class="skill">
-                        <p class="about-icons"><i class="fa-regular fa-laptop-code"></i></p>
-                        <p>Web<br>Development</p>
+                        <p class="about-icons"><i class="fa-brands fa-css3-alt"></i></p>
+                        <p>CSS</p>
                     </div>
                     <div class="skill">
-                        <p class="about-icons"><i class="fa-brands fa-android"></i></p>
-                        <p>Mobile<br>Development</p>
-                    </div>
-                    <div class="skill">
-                        <p class="about-icons"><i class="fa-brands fa-python"></i></p>
-                        <p>Web Scrapping<br>With Python</p>
+                        <p class="about-icons"><i class="fa-brands fa-square-js"></i></p>
+                        <p>JavaScript</p>
                     </div>
                 </div>
               
                 <div class="other-services">
-                    <h1>The services i offer:</h1>
+                    <h1>Other Skills:</h1>
                     <div class="services">
                         <div class="service">
                             <div class="service-content">
                                 <p class="about-icons"><i class="fa-brands fa-figma"></i></p>
                                 <p>UI & UX Designing</p>
-                                <p>I design beautiful web iterfaces with Figma and Adove XD</p>
+                                <p>
+                                    I do use Figma in making designs, but right now I am focusing on the development side.
+                                </p>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service-content">
-                                <p class="about-icons"><i class="fa-regular fa-laptop-code"></i></p>
-                                <p class="two">WEB DEVELOPMENT</p>
-                                <p>I create beautiful iterfaces with simple HTML, CSS, & JavaScript and also frameworks like Angular and ReactJS</p>
+                                <p class="about-icons"><i class="fa-brands fa-react"></i></p>
+                                <p class="two">JavaScrip library</p>
+                                <p>I currently studying ReactJS</p>
                             </div>
                         </div>
                         <div class="service">
                             <div class="service-content">
-                                <p class="about-icons"><i class="fa-brands fa-android"></i></p>
-                                <p>MOBILE DEVELOPMENT</p>
-                                <p>I am an expert mobile developer. I have experience using Flutter and React Native.</p>
+                                <p class="about-icons"><i class="fa-brands fa-github"></i></p>
+                                <p>Github</p>
+                                <p>You can visit my GitHub repository at<br> JasDev129 </p>
                             </div>
                         </div>
-                        <div class="service">
+                        <!-- <div class="service">
                             <div class="service-content">
                                 <p class="about-icons">
                                     <i class="fa-brands fa-node-js"></i>
@@ -119,30 +119,35 @@
                                 <p>VERSION CONTROL</p>
                                 <p>I can use version control systems well, and Git & Mecurial are my go-to tool.</p>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="service">
                             <div class="service-content">
-                                <p class="about-icons"><i class="fa-brands fa-python"></i></p>
-                                <p class="six">WEB SCRAPING</p>
-                                <p>I can collect content and data from the internet then manipulate and analyze as needed.</p>
+                                <p class="about-icons">TAILWIND CSS</p>
+                                <p class="six">CSS Framework</p>
+                                <p>
+                                    Tailwind CSS is my preferred framework in CSS.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+            <!-- FEATURED PROJECT -->
             <section id="projects">
                 <div class="featured-project">
                     <h1>Featured-projects:</h1>
-                    <p>I have worked on many projects over the course of being a Web Developer, here are a few of my live, real-world projects</p>
+                    <p>
+                        Here are some of the personal projects that I made during my learning process.
+                    </p>
                 </div>
                 <div class="featured-project-card">
                     <div class="project-card">
                         <div class="thumbnail">
-                            <img src="" alt="" class="project-card-img">
+                            <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg&_gl=1*1fm0led*_ga*MTExMzk1NzkwMS4xNjY1MjQ4NzY4*_ga_8JE65Q40S6*MTY2ODA4NzE4Mi4xOC4xLjE2NjgwODcxOTEuMC4wLjA." alt="" class="project-card-img">
                         </div>
                         <div class="description">
-                            <h1>Twinder</h1>
-                            <p>A live Geolocation app for finding tweets and twitter users around you.</p>
+                            <h1>Portfolio</h1>
+                            <p>As I shaping my skill I decided to make my  portfolio. I actually made 3 of them.</p>
                         </div>
                         <div class="project-card-btn">
                             <a href="#">View Link</a>
@@ -151,11 +156,11 @@
                     </div>
                     <div class="project-card">
                         <div class="thumbnail">
-                            <img src="" alt="" class="project-card-img">
+                            <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg&_gl=1*1fm0led*_ga*MTExMzk1NzkwMS4xNjY1MjQ4NzY4*_ga_8JE65Q40S6*MTY2ODA4NzE4Mi4xOC4xLjE2NjgwODcxOTEuMC4wLjA." alt="" class="project-card-img">
                         </div>
                         <div class="description">
-                            <h1>Twinder</h1>
-                            <p>A live Geolocation app for finding tweets and twitter users around you.</p>
+                            <h1>Bato Bato Pick U</h1>
+                            <p>A Filipino version of Rock, Paper scissors game. With Pamalo weapon that hits when you lose.</p>
                         </div>
                         <div class="project-card-btn">
                             <a href="#">View Link</a>
@@ -164,11 +169,11 @@
                     </div>
                     <div class="project-card">
                         <div class="thumbnail">
-                            <img src="" alt="" class="project-card-img">
+                            <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg&_gl=1*1fm0led*_ga*MTExMzk1NzkwMS4xNjY1MjQ4NzY4*_ga_8JE65Q40S6*MTY2ODA4NzE4Mi4xOC4xLjE2NjgwODcxOTEuMC4wLjA." alt="" class="project-card-img">
                         </div>
                         <div class="description">
-                            <h1>Twinder</h1>
-                            <p>A live Geolocation app for finding tweets and twitter users around you.</p>
+                            <h1>Emie's Dried Fish</h1>
+                            <p>Emie's Dried Fish Landing page. Showcase quality and affordable dried fish product</p>
                         </div>
                         <div class="project-card-btn">
                             <a href="#">View Link</a>
@@ -177,43 +182,38 @@
                     </div>
                 </div>
             </section>
-            <!-- CONTACT -->
-            <section id="contact">
-                <div class="contact-left">
-                    <h1>Connect with me:</h1>
-                    <p>Satisfied with me? Please contact me</p>
-                    <ul>
-                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                    </ul>
-                </div>
-                <div class="contact-right">
-                    <h2>Contact me, let’s make magic together</h2>
-                        <form>
-                            <input type="text" name="" id="" placeholder="Name:">
-                            <input type="text" name="" id="" placeholder="Email:">
-                            <input type="text" name="" id="" placeholder="Message:">
-                            <button>Send</button>
-                        </form>
-                </div>
-            </section>
+            
         </div>
         <div class="footer">
+            <div class="footer-menu">
+                    <ul>
+                        <li><a href="#hero-section"><i class="fa-solid fa-house"></i> Home</a></li>
+                        <li><a href="#"><i class="fa-solid fa-circle-question"></i> About</a></li>
+                        <li><a href="#projects"><i class="fa-solid fa-folder"></i> Projects</a></li>
+                        <li><a href="https://drive.google.com/file/d/1bnjMItUk1AhZwILXXMqa8bk8Gl-7rpFB/view" target="_blank"><i class="fa-solid fa-link"></i> Resumé</a></li>
+                    </ul>
+            </div>
             <div class="footer-text">
-                <p>@2022 Jayjay Dinero Dinero</p>
-                <p>Fullstack Developer</p>
-                <p>UI Designer</p>
-                <p>Data Analyst</p>
-                <p>Designed by @ernestechie</p>
+                <div class="texts">
+                    <h1>JasDev</h1>
+                    <p>
+                        Junior Front-end Developer.
+                    </p>
+                </div>
+                <div class="emai-contactnum">
+                    <p><span>Address :</span> Catbalogan City, Samar</p>
+                    <p><span>Email :</span> jasper.rantay@gmail.com</p>
+                    <p><span>Contact Number     :</span> 09123456789</p>
+                </div>
             </div>
             <div class="footer-social">
-                <ul>
-                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                <h1>Connect with me:</h1>
+                    <p>Satisfied with me? Please contact me</p>
+                    <ul>
+                        <li><a href="https://www.facebook.com/jasper.rantay"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/jasper-rantay-666541255/"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/JasDev129"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://www.tiktok.com/@xyper129"><i class="fa-brands fa-tiktok"></i></a></li>
                     </ul>
             </div>
         </div>
