--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                 <h1>Connect with me:</h1>
                     <p>Satisfied with me? Please contact me</p>
                     <ul>
-                        <li><a href="https://www.facebook.com/jasper.rantay"><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/jasper-rantay-666541255/"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="https://github.com/JasDev129"><i class="fa-brands fa-github"></i></a></li>
-                        <li><a href="https://www.tiktok.com/@xyper129"><i class="fa-brands fa-tiktok"></i></a></li>
+                        <li><a href="https://www.facebook.com/jasper.rantay" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/jasper-rantay-666541255/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/JasDev129" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://www.tiktok.com/@xyper129" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
                     </ul>
             </div>
         </div>
