--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="footer-menu">
                     <ul>
                         <li><a href="#hero-section"><i class="fa-solid fa-house"></i> Home</a></li>
-                        <li><a href="#"><i class="fa-solid fa-circle-question"></i> About</a></li>
+                        <li><a href="#about-section"><i class="fa-solid fa-circle-question"></i> About</a></li>
                         <li><a href="#projects"><i class="fa-solid fa-folder"></i> Projects</a></li>
                         <li><a href="https://drive.google.com/file/d/1bnjMItUk1AhZwILXXMqa8bk8Gl-7rpFB/view" target="_blank"><i class="fa-solid fa-link"></i> Resumé</a></li>
                     </ul>
