--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
+        <div class="header" id="home">
             <nav class="main-nav">
                 <span class="menu"><i class="fa-solid fa-bars"></i></span>
                 <div class="logo">
                     <h1>JasDev</h1>
                 </div>
                 <ul class="nav-list">
-                    <li class="nav-link"><a href="#">Home</a></li>
+                    <li class="nav-link"><a href="#home">Home</a></li>
                     <li class="nav-link"><a href="#about-section">About</a></li>
                     <li class="nav-link"><a href="#projects">Project</a></li>
                     <li class="nav-link"><a href="https://drive.google.com/file/d/1bnjMItUk1AhZwILXXMqa8bk8Gl-7rpFB/view" target="_blank">Resumé</a></li>
@@ -30,7 +30,7 @@
                         <span>Hello, I'm</span>
                         <h1>Jasper P. Rantay Jr.</h1>
                         <p>
-                            Junior Front-end Developer.
+                            Front-End Developer.
                         </p>
                     </div>
                     <div class="call-to-action">
@@ -187,7 +187,7 @@
         <div class="footer">
             <div class="footer-menu">
                     <ul>
-                        <li><a href="#hero-section"><i class="fa-solid fa-house"></i> Home</a></li>
+                        <li><a href="#home"><i class="fa-solid fa-house"></i> Home</a></li>
                         <li><a href="#about-section"><i class="fa-solid fa-circle-question"></i> About</a></li>
                         <li><a href="#projects"><i class="fa-solid fa-folder"></i> Projects</a></li>
                         <li><a href="https://drive.google.com/file/d/1bnjMItUk1AhZwILXXMqa8bk8Gl-7rpFB/view" target="_blank"><i class="fa-solid fa-link"></i> Resumé</a></li>
@@ -218,5 +218,6 @@
             </div>
         </div>
     </div>
+    <script src="main.js"></script>    
 </body>
 </html>
